--- a/custom_components/uhooair/manifest.json
+++ b/custom_components/uhooair/manifest.json
@@ -4,6 +4,8 @@
   "documentation": "https://gitlab.com/alelec/ha_uhoo",
   "dependencies": [],
   "codeowners": ["@andrewleech", "@ehn", "@mcclown"],
-  "requirements": ["pyuhoo==0.0.2"],
+  "requirements": [
+    "pyuhoo @ git+https://github.com/altr/pyuhoo.git"
+  ],
   "version": "1.0"
 }
