updated config flow

--- a/custom_components/uhooair/manifest.json
+++ b/custom_components/uhooair/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "uhooair",
   "name": "uHooAir",
+  "config_flow": true,
   "dependencies": [],
   "codeowners": ["@andrewleech", "@ehn", "@mcclown", "@altra"],
   "requirements": [
